feat: support sp up rule, and add all missing character images including traveller and aloy

--- a/src/app.css
+++ b/src/app.css
@@ -157,6 +157,10 @@ a:hover {
 .bg-epitome {
 	background-color: #ef7c1aff;
 }
+/* fallback */
+.bg- {
+	background-color: #565654;
+}
 
 .card-stroke {
 	/* prettier-ignore */
